[metadata]
name = tiff_utils

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/bil_api
license = BSD-3-Clause
description = Development of API and Clients for Accessing Brain Image Library Data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/bil_api/issues
    Documentation = https://github.com/CBI-PITT/bil_api#README.md
    Source Code = https://github.com/CBI-PITT/bil_api
    User Support = https://github.com/CBI-PITT/bil_api/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
	scikit-image
	flask
	zarr
	napari[all]
	dask
	requests
	h5py
	hdf5plugin
	imaris-ims-file-reader
	