[metadata]
name = bil_api

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/BrAinPI
license = BSD-3-Clause
description = An API for serving multiscale microscopy data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/BrAinPI/issues
    Documentation = https://github.com/CBI-PITT/BrAinPI#README.md
    Source Code = https://github.com/CBI-PITT/BrAinPI
    User Support = https://github.com/CBI-PITT/BrAinPI/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires =
	setuptools_scm
	numpy
	scikit-build
# add your package requirements here
install_requires =
	scikit-image
	flask
	flask-cors
	flask-login
	flask_limiter
	Flask-Caching
	boto3
	ldap3
	gunicorn
	diskcache
	zarr
	dask
	distributed
	bokeh>=1.0
	requests
	h5py
	imagecodecs
	imaris-ims-file-reader
	tifffile
	neuroglancer-scripts
	neuroglancer
	imageio
	pebble
	natsort
	blosc
	dask
	distributed
	numcodecs
	gevent
	pycryptodome
	zarr_stores @ git+https://github.com/CBI-PITT/zarr_stores.git
